# resume-tailor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/agents/: ai-engineer.md  quality-analyst.md  tech-lead.md
.github/workflows/: ci.yml
evals/: run_evals.py
evals/agents/jd_extraction/: fixtures.py  run_evals.py
evals/jd_extraction/: results.md  run_evals.py
src/resume_tailor/: cli.py  editor.py  logging_config.py  workflow.py
src/resume_tailor/agents/cv_extraction/: agent.py  prompts.py
src/resume_tailor/agents/fabrication_judge/: agent.py  prompts.py
src/resume_tailor/agents/gap_analysis/: agent.py  prompts.py
src/resume_tailor/agents/jd_extraction/: agent.py  prompts.py
src/resume_tailor/agents/resume_tailoring/: agent.py  prompts.py
src/resume_tailor/input_processing/: __init__.py  cv_reader.py
tests/fixtures/cvs/: create_fixtures.py  sample.docx  sample.txt
tests/integration/agents/cv_extraction/: test_placeholder.py
tests/integration/agents/fabrication_judge/: test_placeholder.py
tests/integration/agents/gap_analysis/: test_placeholder.py
tests/integration/agents/jd_extraction/: test_jd_extraction.py  test_placeholder.py
tests/integration/agents/resume_tailoring/: test_placeholder.py
tests/integration/test_workflow/: conftest.py  test_happy_path.py
tests/unit/input_processing/: test_cv_reader.py
tests/unit/test_cli/: conftest.py  test_cli.py
tests/unit/test_editor/: test_editor.py
tests/unit/test_logging_config/: test_logging_config.py
(+6 files in other folders)
