[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-tailor"
version = "0.1.0"
description = "Agentic CLI workflow that tailors a CV to a job description."
requires-python = ">=3.11"
dependencies = [
    "llama-index~=0.14.21",
    "openai~=1.109.1",
    "pdfplumber~=0.11.9",
    "python-docx~=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.5",
    "pre-commit>=3.7.0",
    "ruff>=0.4.0",
]

[project.scripts]
resume-tailor = "resume_tailor.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["resume_tailor"]

[tool.ruff.format]
